# rvpkg-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  check.yml  clippy.yml  coverage.yml  release.yml  test.yml
fs/: README.md
fs/etc/: rvpkg.toml  rvpkg.yaml
fs/usr/share/rvpkg/: packages.csv  packages.yaml
rvbuild/: Cargo.toml
rvbuild/src/: command.rs  lib.rs  package.rs
rvbuild/tests/: rvbuild_syntax.rs  test_rvbuild.rs
rvbuild/tests/examples/: neofetch.rvbuild
rvbuild/tests/examples/invalid/: arch_any_and_other.rvbuild  invalid_arch.rvbuild
rvpkg/: Cargo.toml
rvpkg-tests/: Cargo.toml  Containerfile  build.rs
rvpkg-tests/src/: lib.rs
rvpkg/src/: lib.rs  main.rs
rvpkg/tests/: lib_test.rs
scripts/: get_blfs.py
src/: main.rs  package.py  rvpkg.py  util.rs
src/util/: cli.rs  data.rs  db.rs  io.rs  log.rs  paths.rs  pkg.rs
tests/files/: README.md  test_import.csv
