[package]
name = "rvpkg"
version = "6.0.0"
authors = ["Michael Rivnak <mrivnak86@gmail.com>"]
description = "LFS Package Tracking System"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
prettytable-rs = "0.8.0"
regex = "1.4.3"
termcolor = "1.1.2"
text_io = "0.1.8"
yaml-rust = "0.4.5"
