[package]
name = "rvpkg"
version = "0.0.0"
authors = ["Michael Rivnak <rivnakm1@gmail.com>"]
description = "LFS Package Tracking System"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.2"
clap = "2.33.3"
prettytable-rs = "0.8.0"
regex = "1.4.3"
serde = { version = "1.0.123", features = ["derive"] }
sled = "0.34.6"
text_io = "0.1.8"
toml = "0.5.8"
