[package]
name = "rvbuild"
version = "2.0.0"
authors = ["Mike Rivnak <rivnakm1@gmail.com>"]
description = "rvpkg package build format library"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
curl = "0.4.44"
git2 = "0.18.1"
http = "1.0.0"
http-serde = "2.0.0"
nonempty = { version = "0.9.0", features = ["serialize"] }
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
shlex = "1.2.0"
toml = "0.8.8"
